# low-precision-sgld-jax

./: .gitignore  README.md  pyproject.toml
lpsgld_jax/: __init__.py  data.py  download.py  ensemble.py  gaussian.py  optim_lp.py  quant.py  schedule.py  train_cifar.py  vc.py
lpsgld_jax/models/: __init__.py  resnet.py  resnet_low.py
tests/: crosscheck_qtorch.py  test_cifar_smoke.py  test_gaussian.py  test_lp_layers.py  test_quant.py  test_vc_block.py
